@@ -228,7 +228,6 @@ class HtmlTest extends MediaWikiTestCase {
 '<option value="9">MediaWiki talk</option>' . "\n" .
 '<option value="10">Template</option>' . "\n" .
 '<option value="11">Template talk</option>' . "\n" .
-'<option value="14">Category</option>' . "\n" .
 '<option value="15">Category talk</option>' . "\n" .
 '<option value="100">Custom</option>' . "\n" .
 '<option value="101">Custom talk</option>' . "\n" .
@@ -253,7 +252,6 @@ class HtmlTest extends MediaWikiTestCase {
 '<option value="9">MediaWiki talk</option>' . "\n" .
 '<option value="10">Template</option>' . "\n" .
 '<option value="11">Template talk</option>' . "\n" .
-'<option value="14">Category</option>' . "\n" .
 '<option value="15">Category talk</option>' . "\n" .
 '<option value="100">Custom</option>' . "\n" .
 '<option value="101">Custom talk</option>' . "\n" .
@@ -280,7 +278,6 @@ class HtmlTest extends MediaWikiTestCase {
 '<option value="9">MediaWiki talk</option>' . "\n" .
 '<option value="10">Template</option>' . "\n" .
 '<option value="11">Template talk</option>' . "\n" .
-'<option value="14">Category</option>' . "\n" .
 '<option value="15">Category talk</option>' . "\n" .
 '<option value="100">Custom</option>' . "\n" .
 '<option value="101">Custom talk</option>' . "\n" .
@@ -304,7 +301,6 @@ class HtmlTest extends MediaWikiTestCase {
 '<option value="9">MediaWiki talk</option>' . "\n" .
 '<option value="10">Template</option>' . "\n" .
 '<option value="11">Template talk</option>' . "\n" .
-'<option value="14">Category</option>' . "\n" .
 '<option value="15">Category talk</option>' . "\n" .
 '</select>',
 			Html::namespaceSelector(
@@ -329,7 +325,6 @@ class HtmlTest extends MediaWikiTestCase {
 '<option value="9">MediaWiki talk</option>' . "\n" .
 '<option value="10">Template</option>' . "\n" .
 '<option value="11">Template talk</option>' . "\n" .
-'<option value="14">Category</option>' . "\n" .
 '<option value="15">Category talk</option>' . "\n" .
 '<option value="100">Custom</option>' . "\n" .
 '<option value="101">Custom talk</option>' . "\n" .
